Add the block 1 for news and the dossier

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script src="https://kit.fontawesome.com/9ba09b913b.js" crossorigin="anonymous"></script>
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/style.css">
 
@@ -31,15 +32,121 @@
 	</div>
 
   <div id="generalContainer">
-
   	<div class="header">
   		<div class="logo"><a href="#"><img src="img/logo.svg" /></a></div>
   		<div class="headerMisc">
 	  		<div class="search">search</div>
   			<div class="description">Mensuel critique d’informations et d’analyses</div>			
   		</div>
-  	</div>
+		</div>
+		<!-- News -->
+		
+		<div class="containerNews">
+			<div class="contentNewsLeft">
+				<a href="#">
+					<div class="border">
+						<h3>
+							Reportage sur la frontière gréco-turque
+						</h3>
+						<span>Élisa Perrigueur, janvier 2021</span><span><i class="far fa-eye"></i></span>
+					</div>
+				</a>
+				<a href="#">
+					<div class="border">
+						<h3>
+							Paniques anti­complotistes
+						</h3>
+						<p>Blogs•</p><span> Frédéric Lordon, 25 novembre 2020</span>
+					</div>
+				</a>
+				<a href="#">
+					<div>
+						<h3>
+							Les parcs nationaux africains, un autre enjeu géopolitique
+						</h3>
+						<p class="blogGreen">Blogs•</p><span>Jean-Christophe Servant, 7 janvier 2021</span>
+					</div>
+				</a>
+			</div>
+			<div class="contentNewsCenter">
+				<a href="#">
+					<div class="border">
+						<img src="img/LesÉtatsdésunisd’Amérique.jpeg" alt="" />
+						<h3>
+							Les États désunis d’Amérique
+						</h3>
+						<span> Richard Keiser, janvier 2021</span><span><i class="far fa-eye"></i></span>
+						<p>
+							Vaincus dans la course à la Maison Blanche, les républicains ont tout de même eu un motif de satisfaction, le 3 novembre dernier (...)<span><i class="fas fa-arrow-right"></i></span>
+						</p>
+					</div>
+				</a>
+				<a href="#">
+					<div class="border">
+						<img src="img/L’autorouteenpièces.jpeg" alt="" />
+						<h3>
+							L’autoroute en pièces
+						</h3>
+						<span> MdV• Émilie Seto, février-mars 2021</span>
+					</div>	
+				</a>
+				<a href="#">
+					<div>
+						<h3>
+							La guerre du Golfe tourne la page du panarabisme
+						</h3>
+						<span>  Akram Belkaïd, 2010</span>
+					</div>	
+				</a>
+				<a href="#">
+					<div>
+						<img src="img/Enavantverslemonded’avant.jpeg" alt="" />
+						<h3>
+							En avant vers le monde d’avant
+						</h3>
+						<span>  Laurent Cordonnier, janvier 2021</span><span><i class="fas fa-arrow-right"></i></span>
+					</div>	
+				</a>
+			</div>
+			<div class="contentNewsRight">
+				<a href="#">
+					<div class="border">
+						<h3>
+							Les égouts, sentinelles sanitaires
+						</h3>
+						<span> Mohamed Larbi Bouguerra, octobre 2020</span>
+					</div>
+				</a>
+				<a href="#">
+					<div class="border">
+						<h3>
+							Impasses des politiques identitaires
+						</h3>
+						<span> Stéphane Beaud & Gérard Noiriel, janvier 2021</span><span><i class="far fa-eye"></i></span>
+					</div>
+				</a>
+				<a href="#">
+					<div>
+						<h3>
+							Intégration, la grande obsession
+						</h3>
+						<span>B. B., février 2018</span>
+					</div>
+				</a>
+			</div>
+		</div>
+
+		<div class="containerDossier">
+			<a href="#" >
+				<img src="img/dossier.jpeg" alt="#" />
+				<h3>Dossier<span> États-Unis : changement ou restauration ?</span><p> décembre 2020</p></h3>
+			</a>
+		</div>
+
+
+
   </div>
+
 
   
 </body>
