section news and dossier finished

--- a/index.html
+++ b/index.html
@@ -135,14 +135,66 @@
 				</a>
 			</div>
 		</div>
-
+		<hr>
 		<div class="containerDossier">
 			<a href="#" >
 				<img src="img/dossier.jpeg" alt="#" />
 				<h3>Dossier<span> États-Unis : changement ou restauration ?</span><p> décembre 2020</p></h3>
 			</a>
 		</div>
-
+		<hr>
+		<div class="containerNews">
+			<div class="contentNewsLeft">
+				<a href="#">
+					<div class="border">
+						<img src="img/médiasfrancaisqui.png" alt="#" class="imgcontentNews2">
+						<h3>
+							Médias français, qui possède quoi ?
+						</h3>
+						<span>décembre 2020</span>
+					</div>
+				</a>
+				<a href="#">
+					<div class="border">
+						<h3>
+							Alain Finkielkraut, bouffon du roi
+						</h3>
+						<p class="blogGreen">Blogs•</p><span>  Dominique Vidal, 16 avril 2020</span>
+					</div>
+				</a>
+				<a href="#">
+					<div>
+						<h3>
+							Pour Julian Assange
+						</h3>
+						<span>S. H., décembre 2018</span>
+					</div>
+				</a>
+			</div>
+			<div class="contentNewsCenter">
+				<a href="#" class="newCenterBig">
+					<img src="img/leautoroute.jpeg" alt="#" class="bigImageCenter"/>
+					<h3>
+						L’autoroute en pièces
+					</h3>
+					<span> MdV• Émilie Seto, février-mars 2021</span>
+					<p>
+						Émilie Seto s’est appuyée sur le travail que nos excellents confrères de Marsactu ont consacré à la L2 à Marseille. «Avec le temps qui passe, je ressens de plus en plus son chaos mélancolique. C’est sûrement ce qui se passe quand on finit par ne plus entendre ses voitures tellement on y est habitués.» Émilie Seto n’habite Marseille que depuis trois ans, mais elle en a déjà saisi une certaine essence. Et gagné la réputation enviée de (...) <span><i class="fas fa-arrow-right"></i></span>
+					</p>
+				</a>
+			</div>	
+			<div class="contentNewsRight">
+				<a href="#">
+						<img src="img/Plates-formes de rééducation.jpeg" alt="" />
+						<h3>
+							Plates-formes de rééducation
+						</h3>
+						<span> Pierre Rimbert, janvier 2021</span>
+						<p>Mais que vaut la censure sans rééducation? Apparemment très inspirés par les pratiques du Parti communiste chinois en matière de contrôle du débat d’idées, les patrons libéraux de la Silicon Valley ont lancé une vaste campagne de (...) </p><span><i class="fas fa-arrow-right"></i></span>
+					</div>	
+				</a>
+			</div>
+		</div>	
 
 
   </div>
