--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/submenu.css">
+  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/news.css">
+
 	<script src="http://www.w3schools.com/lib/w3data.js"></script>
 	<script src="https://kit.fontawesome.com/9ba09b913b.js" crossorigin="anonymous"></script>
 	  <title>Le Monde diplomatique - Mensuel critique d'informations et d'analyses</title>
