--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/news.css">
 
-	<script src="http://www.w3schools.com/lib/w3data.js"></script>
+	<script src="https://www.w3schools.com/lib/w3data.js"></script>
 	<script src="https://kit.fontawesome.com/9ba09b913b.js" crossorigin="anonymous"></script>
 	  <title>Le Monde diplomatique - Mensuel critique d'informations et d'analyses</title>
 	</head>
