--- a/index.html
+++ b/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/submenu.css">
-  <link rel="stylesheet" href="css/header.css">
-  <link rel="stylesheet" href="css/news.css">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/submenu.css">
+		<link rel="stylesheet" href="css/header.css">
+		<link rel="stylesheet" href="css/rowNews.css">
+		<link rel="stylesheet" href="css/news.css">
 
-	<script src="https://www.w3schools.com/lib/w3data.js"></script>
-	<script src="https://kit.fontawesome.com/9ba09b913b.js" crossorigin="anonymous"></script>
-	  <title>Le Monde diplomatique - Mensuel critique d'informations et d'analyses</title>
+		<script src="https://www.w3schools.com/lib/w3data.js"></script>
+		<script src="https://kit.fontawesome.com/9ba09b913b.js" crossorigin="anonymous"></script>
+		<title>Le Monde diplomatique - Mensuel critique d'informations et d'analyses</title>
 	</head>
 	<body>
-
 		<div w3-include-html="components/submenu.html"></div>
-
-	  <div id="generalContainer">
+		<div id="generalContainer">
 			<div w3-include-html="components/header.html"></div>
-		  <div w3-include-html="components/news.html"></div>
-	  </div>
+			<div w3-include-html="components/rowNews.html"></div>
+			<div w3-include-html="components/news.html"></div>
+		</div>
 
 		<script>
 			w3IncludeHTML();
