--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/submenu.css">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/news.css">
+  <link rel="stylesheet" href="css/footer.css">
 
 	<script src="https://www.w3schools.com/lib/w3data.js"></script>
 	<script src="https://kit.fontawesome.com/9ba09b913b.js" crossorigin="anonymous"></script>
@@ -21,6 +22,7 @@
 			<div w3-include-html="components/header.html"></div>
 		  <div w3-include-html="components/news.html"></div>
 	  </div>
+	  <div w3-include-html="components/footer.html"></div>
 
 		<script>
 			w3IncludeHTML();
